# Locky

./: .gitignore  README.md  cli.py  config.py  pyproject.toml
core/: ai_desc.py  describer.py  metadata.py  preview.py  vault.py
tests/: test_ai_desc.py  test_metadata.py  test_vault.py
ui/: fzf_ui.py
utils/: file_utils.py
